--- a/A/Altice/Altice_January2020/ads/SDL_iSTART_49/300x250/300x250_frame4.html
+++ b/A/Altice/Altice_January2020/ads/SDL_iSTART_49/300x250/300x250_frame4.html
@@ -91,7 +91,7 @@ amo.registerAttribute("frameText32","TEXT","<div style='top: 70px;left: 20px;lin
 amo.registerAttribute("frameText33","TEXT","<div style='top: 95px;left: 20px;line-height: 1.4;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual Contract </div></div>");
 amo.registerAttribute("frameText41", "TEXT", "<div style='top:23px;left:20px;line-height:1.1;'><div style='font-size:20px;letter-spacing:-0.1px;'>TV + Fast Internet</div></div>");
 amo.registerAttribute("frameText42", "TEXT", "<div style='top:53px;left:20px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>49<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top:-9px;margin-left:-1px;'>mo./1 yr.<div class='AlticeRegular' style='font-size:10px;margin-top:1px;'>plus taxes, fees & charges</div></div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top:158px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div><div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top:158px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
