--- a/C/Crocs/Crocs_SS20/Template2/ads/300x250/300x250.html
+++ b/C/Crocs/Crocs_SS20/Template2/ads/300x250/300x250.html
@@ -46,11 +46,12 @@
       <div id="backgroundImage3" class="asset frame" data-image="backgroundImage3"></div>
       <div id="headlineImage1" class="asset frame" data-image="headlineImage1"></div>
       <div id="headlineImage2" class="asset frame" data-image="headlineImage2"></div>
-      <div id="shineVideo" style="top:0px;left:0px;width:inherit;height:inherit;">
+      <div id="shine" class="frame"></div>
+      <!-- <div id="shineVideo" style="top:0px;left:0px;width:inherit;height:inherit;">
         <video muted playsinline autoplay style="width:100%;height:100%;">
           <source  type="video/mp4">
         </video>
-      </div>
+      </div> -->
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="cta" class="asset frame" data-image="ctaImage"></div>
@@ -89,12 +90,12 @@
             // ref: 'ref.png'
             ctaBtnColor: '#fff',
             logoImage: 'images/300x250_Crocs_Logo.png',
-            shineVideo: 'images/LiteRide_300x250_Animation_Light-Flare_300x250.mov',
           },
           beforeLoad: function(data){
             data.map(function(content){
               // content.ctaBtn = content.ctaBtnColor.split('^')[0];
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
+              for(var i = 0; i<16; i++) { content['shineImage'+i] = 'images/shine/shine_'+(i<10?0:'')+i+'.png'; }
             });
             return data;
           }
@@ -104,14 +105,61 @@
             if('button' in e.target.dataset) { } else { amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
           if(adData.impressionTracker.toLowerCase() != 'na'){ ad.loadAssets(adData.impressionTracker, function(assets){ }); }
-          var shine = function(){
-            ad.layers.shineVideo.querySelector('video source').src = adData.shineVideo;
+          var canvas = document.createElement('canvas');
+          ad.layers.shine.appendChild(canvas);
+          var ctx = canvas.getContext('2d')
+          canvas.width = 600;
+          canvas.height = 500;
+          canvas.style.webkitTransform = 'scale(0.5)';
+          canvas.style.transform = 'scale(0.5)';
+          canvas.style.transformOrigin = 'top left';
+          var duration = 600, frames = 16;
+          window.reqAnimFrame = (function(){ return function(callback, element){ window.setTimeout(callback, duration / frames); }; })();
+          var shineAnimation = function(){
+            if(ad.layers.headlineImage1.style.opacity == 1) {
+              var count = 0;
+              function animate() {
+                var image = new Image();
+                image.src = adData['shineImage'+count];
+                image.onload = function(){
+                  ctx.clearRect(0, 0, 600, 500);
+                  ctx.drawImage(image, 0, 0);
+                  ctx.drawImage(image, 0, 0);
+                }
+                count++;
+                if(count < frames){
+                    window.reqAnimFrame(function() { animate(); });
+                }
+              }
+              animate();
+            }
+          }
+          var reverseShineAnimation = function(){
+            if(ad.layers.headlineImage2.style.opacity == 1) {
+              var count = frames-1;
+              function animate() {
+                var image = new Image();
+                image.src = adData['shineImage'+count];
+                image.onload = function(){
+                  ctx.clearRect(0, 0, 600, 500);
+                  ctx.drawImage(image, 0, 0);
+                  ctx.drawImage(image, 0, 0);
+                }
+                count--;
+                if(count >= 0){
+                    window.reqAnimFrame(function() { animate(); });
+                }
+              }
+              animate();
+            }
           }
           var adWidth = 300;
           gsap.timeline({defaults:{ease: Power1.easeOut, duration: 0.5}})
           .from('#backgroundImage1, #logoImage, #cta', { x:'100%', y:'-50%', delay:0.5})
-          .from('#headlineImage1', { autoAlpha: 0, duration: 0.3, delay:0.3, oncomplete:shine})
-          .from('#headlineImage2', { y:10, autoAlpha: 0, duration: 0.3, delay:1})
+          .from('#headlineImage1', { autoAlpha: 0, duration: 0.3, delay:0.3})//, oncomplete:shineAnimation})
+          .from('#headlineImage2', { y:5, autoAlpha: 0, duration: 0.3, delay:1})//, oncomplete:reverseShineAnimation})
+          gsap.delayedCall(2, shineAnimation);
+          gsap.delayedCall(3.8, reverseShineAnimation);
         });
       }, 2000);
     </script>
