--- a/C/Crocs/Crocs_SS20/Template2/ads/728x90/728x90.html
+++ b/C/Crocs/Crocs_SS20/Template2/ads/728x90/728x90.html
@@ -47,6 +47,7 @@
       <div id="backgroundImage3" class="asset frame" data-image="backgroundImage3"></div>
       <div id="headlineImage1" class="asset frame" data-image="headlineImage1"></div>
       <div id="headlineImage2" class="asset frame" data-image="headlineImage2"></div>
+      <div id="shine" class="frame" style="top:-90px;left:250px;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="cta" class="asset"
@@ -97,6 +98,7 @@
             data.map(function(content){
               // content.ctaBtn = content.ctaBtnColor.split('^')[0];
               // content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
+              for(var i = 0; i<16; i++) { content['shineImage'+i] = 'images/shine/shine_'+(i<10?0:'')+i+'.png'; }
             });
             return data;
           }
@@ -106,12 +108,62 @@
             if('button' in e.target.dataset) { } else { amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
           if(adData.impressionTracker.toLowerCase() != 'na'){ ad.loadAssets(adData.impressionTracker, function(assets){ }); }
+          var canvas = document.createElement('canvas');
+          ad.layers.shine.appendChild(canvas);
+          var ctx = canvas.getContext('2d')
+          canvas.width = 600;
+          canvas.height = 500;
+          canvas.style.webkitTransform = 'scale(0.6)';
+          canvas.style.transform = 'scale(0.6)';
+          canvas.style.transformOrigin = 'top left';
+          var duration = 600, frames = 16;
+          window.reqAnimFrame = (function(){ return function(callback, element){ window.setTimeout(callback, duration / frames); }; })();
+          var shineAnimation = function(){
+            if(ad.layers.headlineImage1.style.opacity == 1) {
+              var count = 0;
+              function animate() {
+                var image = new Image();
+                image.src = adData['shineImage'+count];
+                image.onload = function(){
+                  ctx.clearRect(0, 0, 600, 500);
+                  ctx.drawImage(image, 0, 0);
+                  ctx.drawImage(image, 0, 0);
+                }
+                count++;
+                if(count < frames){
+                    window.reqAnimFrame(function() { animate(); });
+                }
+              }
+              animate();
+            }
+          }
+          var reverseShineAnimation = function(){
+            if(ad.layers.headlineImage2.style.opacity == 1) {
+              var count = frames-1;
+              function animate() {
+                var image = new Image();
+                image.src = adData['shineImage'+count];
+                image.onload = function(){
+                  ctx.clearRect(0, 0, 600, 500);
+                  ctx.drawImage(image, 0, 0);
+                  ctx.drawImage(image, 0, 0);
+                }
+                count--;
+                if(count >= 0){
+                    window.reqAnimFrame(function() { animate(); });
+                }
+              }
+              animate();
+            }
+          }
           var adWidth = 728, adHeight = 90;
           gsap.timeline({defaults:{ease: Power1.easeOut, duration: 0.5}})
           .from('#backgroundImage1', { x:-25,y:adHeight, delay:0.5 })
           .from('#backgroundImage2,#logoImage,#cta', { x:26,y:-adHeight }, '-=0.5')
           .from('#headlineImage1', { autoAlpha: 0, duration: 0.3, delay:0.3})
           .from('#headlineImage2', { y:10, autoAlpha: 0, duration: 0.3, delay:1})
+          gsap.delayedCall(2, shineAnimation);
+          gsap.delayedCall(3.8, reverseShineAnimation);
         });
       }, 2000);
     </script>
